<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">train</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">列车查询系统</string>
    <string name="query_text">查询方式</string>
    <string name="fujia_text">附加功能</string>
    <string name="cccx_text">车次查询</string>
    <string name="czcx_text">车站查询</string>
    <string name="zzcx_text">站站查询</string>
    <string name="train_detailed">详细信息</string>
    <string name="detailed">详细信息</string>
    <string name="details">详细资料</string>
    <string name="the_way_to_station">途径车站</string>
    <string name="detailed_query">详细查询</string>
    <string name="desc">让画面变得炫酷</string>
    <string name="train_number">车次:</string>
    <string name="station_name">站名:</string>
    <string name="starting_station">始发站:</string>
    <string name="terminal_station">终点站:</string>
    <string name="train_number_hint">请输入车次</string>
    <string name="the_train_type">列车类型:</string>
    <string name="arrive_time">到站时间:</string>
    <string name="drive_time">开车时间:</string>
    <string name="query">查询</string>
    <string name="back">返回</string>
    <string name="cctj">车次添加</string>
    <string name="cztj">车站添加</string>
    <string name="gxtj">关系添加</string>
    <string name="czjc">车站简称:</string>
    <string name="add">添加</string>
</resources>
