<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

 <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@drawable/title"
    android:orientation="vertical">
    
     <TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:text = "@string/title"
         android:textSize="23sp"
         android:textColor="#555"
         android:layout_gravity="center_horizontal"/>
     </LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@drawable/navigator"
    android:orientation="horizontal">   
    <Button 
        android:id="@+id/zzcx_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="@string/zzcx_text"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
     <Button 
        android:id="@+id/train_detailed3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/train_detailed"/>
</LinearLayout>
   <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         >
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="5"
         android:orientation="vertical"
         android:background="#FFCC66"
         android:layout_margin="10dp"
         >

         <TextView 
             android:id="@+id/zzcx_string"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/train_number"
             android:textSize="40sp"
             android:layout_marginTop="120dp"
             android:layout_marginLeft="20dp"/>
         
         <EditText 
             android:id="@+id/zzcx_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="35sp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_alignTop="@id/cccx_string"
             android:layout_toRightOf="@id/cccx_string"
             android:hint="@string/train_number_hint"
             android:background="#fff"/>
         
         <Button
             android:id="@+id/zzcx_query" 
             android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/cccx_string"
             android:layout_marginTop="50dp"
             android:layout_marginLeft="90dp"
             android:text = "@string/query"/>
         
         <Button
             android:id="@+id/zzcx_back"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/cccx_query"
             android:layout_toRightOf="@id/cccx_query"
             android:layout_marginLeft="140dp"
             android:text="@string/back"/>
     </RelativeLayout>   

         <ImageView 
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:layout_margin="10dp"
             android:background="@drawable/adv3"
             android:contentDescription="@string/desc"/>
     </LinearLayout>
</LinearLayout>