<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

 <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@drawable/title"
    android:orientation="vertical">
    
     <TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:text = "@string/title"
         android:textSize="23sp"
         android:textColor="#555"
         android:layout_gravity="center_horizontal"/>
     </LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@drawable/navigator"
    android:orientation="horizontal">   
    <Button 
        android:id="@+id/fjgn_text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="@string/fujia_text"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
     <Button 
        android:id="@+id/fujia_cctj"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/cctj"/>
</LinearLayout>
   <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         >
     <TableLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="5"
         android:orientation="vertical"
         android:background="#FFCC66"
         android:layout_margin="10dp"
         android:padding="50dp"
         android:stretchColumns="1"
         >
         <TableRow >
          <TextView 
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/train_number"
              android:textSize="30sp"
              android:layout_marginTop="10dp"/>
          <AutoCompleteTextView 
              android:id="@+id/cctj_train_number"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="30sp"
              android:layout_marginLeft="20dp"
              android:background="#fff"
              android:layout_marginTop="10dp"/>   
         </TableRow>
         <TableRow >
          <TextView 
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/the_train_type"
              android:textSize="30sp"
              android:layout_marginTop="10dp"/>
          <AutoCompleteTextView 
              android:id="@+id/cctj_train_type"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="30sp"
              android:layout_marginLeft="20dp"
              android:background="#fff"
              android:layout_marginTop="10dp"/>   
         </TableRow>
         <TableRow >
          <TextView 
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/starting_station"
              android:textSize="30sp"
              android:layout_marginTop="10dp"/>
          <AutoCompleteTextView 
              android:id="@+id/cctj_starting_station"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="30sp"
              android:layout_marginLeft="20dp"
              android:background="#fff"
              android:layout_marginTop="10dp"/>   
         </TableRow>
          <TableRow >
          <TextView 
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/terminal_station"
              android:textSize="30sp"
              android:layout_marginTop="10dp"/>
          <AutoCompleteTextView 
              android:id="@+id/cctj_terminal_station"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="30sp"
              android:layout_marginLeft="20dp"
              android:background="#fff"
              android:layout_marginTop="10dp"/>   
         </TableRow>
         <TableRow >
             <Button 
                 android:id="@+id/cctj_add"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:layout_marginLeft="50dp"
                 android:text="@string/add"/>
              <Button 
                 android:id="@+id/cctj_back"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:layout_marginLeft="10dp"
                 android:text="@string/back"/>
         </TableRow>       
     </TableLayout>   

         <ImageView 
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:layout_margin="10dp"
             android:background="@drawable/adv4"
             android:contentDescription="@string/desc"/>
     </LinearLayout>
</LinearLayout>