<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

 <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@drawable/title"
    android:orientation="vertical">
    
     <TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:text = "@string/title"
         android:textSize="23sp"
         android:textColor="#555"
         android:layout_gravity="center_horizontal"/>
     </LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@drawable/navigator"
    android:orientation="horizontal">   
    <Button 
        android:id="@+id/list_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="@string/details"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
     <Button 
        android:id="@+id/list_the_way_to_station"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/the_way_to_station"/>
</LinearLayout>
<ListView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
<Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>
</LinearLayout>