<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

 <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@drawable/title"
    android:orientation="vertical">
    
     <TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:text = "@string/title"
         android:textSize="23sp"
         android:textColor="#555"
         android:layout_gravity="center_horizontal"/>
     </LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@drawable/navigator"
    android:orientation="horizontal">   
    <Button 
        android:id="@+id/fujia_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="@string/fujia_text"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
     <Button 
        android:id="@+id/detailed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/detailed"/>
</LinearLayout>
   <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         >
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="5"
         android:orientation="vertical"
         android:background="#FFCC66"
         android:layout_margin="10dp"
         >
         <Button 
             android:id="@+id/cctj"
             android:layout_width="300dp"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:background="@drawable/cctj_button"
             android:layout_gravity="center_horizontal"
             android:layout_margin="30dp"/>
         
           <Button 
             android:id="@+id/cztj"
             android:layout_width="300dp"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:background="@drawable/cztj_button"
             android:layout_gravity="center_horizontal"
             android:layout_margin="30dp"/>
       
            <Button 
             android:id="@+id/gxtj"
             android:layout_width="300dp"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:background="@drawable/gxtj_button"
             android:layout_gravity="center_horizontal"
             android:layout_margin="30dp"/>
     </LinearLayout>   

         <ImageView 
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:layout_margin="10dp"
             android:background="@drawable/adv2"
             android:contentDescription="@string/desc"/>
     </LinearLayout>
</LinearLayout>