<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

 <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@drawable/title"
    android:orientation="vertical">
    
     <TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:text = "@string/title"
         android:textSize="23sp"
         android:textColor="#555"
         android:layout_gravity="center_horizontal"/>
     </LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@drawable/navigator"
    android:orientation="horizontal">   
    <Button 
        android:id="@+id/navigator1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="@string/query_text"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
     <Button 
        android:id="@+id/navigator2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/detailed_query"/>
</LinearLayout>
   <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         >
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="5"
         android:orientation="vertical"
         android:background="#FFCC66"
         android:layout_margin="10dp"
         >
         <Button 
             android:id="@+id/cccx"
             android:layout_width="230dp"
             android:layout_height="70dp"
             android:background="@drawable/cccx_button"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="40dp"
             android:layout_alignParentTop="true"
             android:layout_marginTop="40dp"/>
         
           <Button 
             android:id="@+id/czcx"
             android:layout_width="230dp"
             android:layout_height="70dp"
             android:background="@drawable/czcx_button"
             android:layout_alignTop="@id/cccx"
             android:layout_alignParentRight="true"
             android:layout_marginRight="40dp"/>
       
            <Button 
             android:id="@+id/zzcx"
             android:layout_width="230dp"
             android:layout_height="70dp"
             android:background="@drawable/zzcx_button"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="40dp"
             android:layout_below="@id/cccx"
             android:layout_marginTop="50dp"/>
         
           <Button 
             android:id="@+id/fjgn"
             android:layout_width="230dp"
             android:layout_height="70dp"
             android:background="@drawable/fjgn_button"
             android:layout_alignTop="@id/zzcx"
             android:layout_alignParentRight="true"
             android:layout_marginRight="40dp"/>
         
           <Button 
             android:id="@+id/gy"
             android:layout_width="230dp"
             android:layout_height="70dp"
             android:background="@drawable/about_button"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="40dp"
             android:layout_below="@id/zzcx"
             android:layout_marginTop="50dp"/>
         
           <Button 
             android:id="@+id/bz"
             android:layout_width="230dp"
             android:layout_height="70dp"
             android:background="@drawable/help_button"
             android:layout_alignTop="@id/gy"
             android:layout_alignParentRight="true"
             android:layout_marginRight="40dp"/>
         
     </RelativeLayout>   

     <LinearLayout 
             android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:layout_margin="10dp"
             android:gravity="center">
       <com.example.train.GGView
           	 android:layout_width="400dp"
           	 android:layout_height="600dp"
             />
         </LinearLayout>
     </LinearLayout>
</LinearLayout>
